# termset

./: .mtm  .termset.yml.swp  AGENTS.md  Cargo.toml  README.md  a  bugs  polyterm.setup  termem.desktop  terminals.yml  termset.desktop  termset.yml  work.setup  workspace  workspace01.yaml  workspace2
assets/: default-termset.yml  termset.desktop.in
demo/: termset.yml  workspace
examples/: demo.rs
scripts/: demo-screenshot.sh  install-icon.sh
src/: config.rs  lib.rs  main.rs  testkit.rs  ui.rs
tests/: screenshots.rs  scrollbar_check.rs
